tests/sksl/errors/GenericArgumentMismatch.dsl.glsl
### Compilation failed:

error: no match for sin(int, int)

error: no match for sin(bool)

2 errors
